# wisp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  flake.nix  index.html  release-plz.toml  shell.nix  wisp-editor.js
.github/workflows/: ci.yml  cleanup-pr-preview.yml  deploy-pr-preview.yml  release-plz.yml
assets/wisp/: test_audio_fft.wgsl  test_compute.wgsl  test_float.wgsl  test_image.wgsl  test_multi_pass_rendering.wgsl
crates/bevy_wisp/: CHANGELOG.md  Cargo.toml  README.md
crates/bevy_wisp/assets/wisp/: test_audio.wgsl  test_color.wgsl  test_inputs.wgsl  test_persistent_buffer.wgsl
crates/bevy_wisp/examples/: multipass.rs  ui.rs
crates/bevy_wisp/src/: asset.rs  audio.rs  error.rs  example_shaders.rs  globals.rs  inputs.rs  lib.rs  render.rs  schema.rs  targets.rs  ui.rs
crates/wisp_editor/: CHANGELOG.md  Cargo.toml  README.md
crates/wisp_editor/src/: audio.rs  main.rs
crates/wisp_editor/web/: index.html
editor/: Cargo.toml
editor/src/: audio.rs  main.rs
editor/web/: index.html
examples/: audio.rs  compute.rs  editor.rs  image.rs  multipass.rs  simple.rs  stress.rs  ui.rs
pkgs/: serve-wisp-editor-web.nix  wasm-bindgen-cli.nix  wisp-editor-web.nix
pr-preview/pr-6/: index.html
pr-preview/pr-7/: index.html
pr-preview/pr-8/: wisp_editor.js
src/: align.rs  annot.rs  asset.rs  audio.rs  error.rs  globals.rs  inputs.rs  lib.rs  reflect.rs  render.rs  schema.rs  targets.rs  ui.rs
