[workspace]
resolver = "3"
members = ["crates/bevy_wisp", "crates/wisp_editor"]

[workspace.package]
edition = "2024"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
repository = "https://github.com/nannou-org/wisp"
homepage = "https://github.com/nannou-org/wisp"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bevy = "0.19"
bevy_egui = "0.40"

# Size-optimised profile for the wasm build of the editor (see
# `crates/wisp_editor`). Profiles must live in the workspace root manifest.
[profile.wasm_release]
inherits = "release"
opt-level = 'z'      # optimise for size
lto = true
codegen-units = 1
panic = 'abort'      # drop unwinding to shrink the binary
strip = true
debug = false
