[workspace]
resolver = "3"
members = ["crates/bevy_wisp", "crates/wisp_editor"]

[workspace.package]
edition = "2024"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
repository = "https://github.com/nannou-org/wisp"
homepage = "https://github.com/nannou-org/wisp"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# The full umbrella crate, for the editor (windowing/winit/render) and the
# library's examples; the library itself depends on the individual subcrates.
bevy = "0.19"
bevy_app = "0.19"
bevy_asset = "0.19"
bevy_camera = "0.19"
bevy_core_pipeline = "0.19"
bevy_derive = "0.19"
bevy_ecs = "0.19"
bevy_image = "0.19"
bevy_input = "0.19"
bevy_log = "0.19"
# Only the vector types are used; drop the default `rand` and `curve` features.
bevy_math = { version = "0.19", default-features = false, features = ["std"] }
bevy_platform = "0.19"
bevy_reflect = "0.19"
bevy_render = "0.19"
bevy_shader = "0.19"
bevy_time = "0.19"
# Only the `default()` helper is used; drop the default `parallel` and
# `buffered_channel` features.
bevy_utils = { version = "0.19", default-features = false }
bevy_window = "0.19"
bevy_egui = "0.40"

# Size-optimised profile for the wasm build of the editor (see
# `crates/wisp_editor`). Profiles must live in the workspace root manifest.
[profile.wasm_release]
inherits = "release"
opt-level = 'z'      # optimise for size
lto = true
codegen-units = 1
panic = 'abort'      # drop unwinding to shrink the binary
strip = true
debug = false
