[package]
name = "wisp_editor"
version = "0.2.0"
description = "A live-coding editor for bevy_wisp shaders, native and on the web."
readme = "README.md"
keywords = ["bevy", "wgsl", "shader", "live-coding", "editor"]
categories = ["graphics", "rendering", "visualization"]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "wisp_editor"
path = "src/main.rs"

[dependencies]
bevy_wisp = { version = "0.2", path = "../bevy_wisp", features = ["ui", "audio"] }
# Full bevy for windowing/winit/render (native backends).
bevy = { workspace = true }
# The editor names `bevy_egui::` directly, so depend on it explicitly rather
# than relying on bevy_wisp's re-export behind the `ui` feature.
bevy_egui = { workspace = true }
# Syntax highlighting, kept in lockstep with the `egui` used by `bevy_egui`.
egui_extras = { version = "0.34", default-features = false }
egui_tiles = "0.15"
# Persistent shader storage, the same on native (a `redb` file in the platform
# data dir) and the web (browser local storage). `default-features = false`
# drops bevy_pkv's own `bevy` feature, which would otherwise pull in a second,
# conflicting `bevy_ecs`; the store is wrapped in a local `Resource` instead.
bevy_pkv = { version = "0.16", default-features = false, features = ["redb"] }

# Microphone capture for `@audio` shaders; native only (cpal's web backends do
# not implement input yet). Pinned to the version bevy's audio already uses, so
# no new system libraries and no duplicate cpal.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.17"
# Wait-free SPSC ring buffer for handing samples from the cpal callback (audio
# thread) to the drain system without locking or allocating on the audio thread.
rtrb = "0.3"

[features]
# Pick the wasm rendering backend. `webgl2` is the default because it runs in
# every current browser; the compute-pass shaders surface a pipeline error
# under it. `webgpu` runs every bundled shader (including the compute passes)
# but needs a WebGPU-capable browser - build it with
# `--no-default-features --features webgpu`. The features are inert on native
# (bevy gates them behind `wasm32`).
default = ["webgl2"]
webgpu = ["bevy/webgpu"]
webgl2 = ["bevy/webgl2"]
